a bit of mongodb

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,7 +17,7 @@
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Admin</a>
+    <a class="links" href="/login">Login</a>
     <p id="about">We are trying our best to help you do your best. Provided on the job board, 
         we have carefully selected the best jobs available on the market. Whether they're in the office or fully remote,
         there will always be options for you.</p>
