--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,6 @@
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Admin</a>
+    <a class="links" href="/login">Login</a>
 </body>
 </html>
