--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,11 +9,11 @@
 
 <body>
     <img src="images/logo.png" id="logo">
-	<p id="title">Admin Login</p>
+	<p id="title">User Login</p>
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Admin</a>
+    <a class="links" href="/login">Login</a>
     <div id="form">
         <script src="/jobBoardServer.js"></script>
         <form id="login" action=<%- port %> method="post">
