--- a/views/invalid.ejs
+++ b/views/invalid.ejs
@@ -13,7 +13,7 @@
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Admin</a>
+    <a class="links" href="/login">Login</a>
     <p id="invalid">Invalid login.<br>Click admin to try again.</p>
 </body>
 </html>
