--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Login</title>
+	<title>Register User</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -13,17 +13,29 @@
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Admin</a>
+    <a class="links" href="/login">Login</a>
     <div id="form">
+        <script>
+            function validate() {
+                const password = document.getElementById("password");
+                const password2 = document.getElementById("password2");
+
+                if (password.value !== password2.value) {
+                    alert("Passwords do not match");
+                    return false;
+                }
+                return true;
+            }
+        </script>
         <form id="register" action=<%- port %> method="post">
             <fieldset>
                 Username: <br>
-                <input type="text" size="20" id="username" name="username"> <br>
+                <input type="text" size="20" id="username" name="username" required> <br>
                 Password: <br>
-                <input type="text" size="20" id="password" name="password"> <br>
+                <input type="text" size="20" id="password" name="password" minlength="4" required> <br>
                 Password: <br>
-                <input type="text" size="20" id="password2" name="password2"> <br>
-                <input type="submit" onclick="return password===password2" value="Login">
+                <input type="text" size="20" id="password2" name="password2" minlength="4" required> <br>
+                <input type="submit" onclick="return validate()" value="Login">
             </fieldset>
         </form>
     </div>
