--- a/views/board.ejs
+++ b/views/board.ejs
@@ -1,3 +1,11 @@
+<!doctype html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8" />
+	<title>Register User</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
     <img src="images/logo.png" id="logo">
