more admin button functionality

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,13 +19,12 @@
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
-    <a class="links" href="/login">Login</a>
-    <a class="links" href="/login">Admin</a><br>
+    <a class="links" href="/login">Login</a><br>
     <p id="btn-header">Actions</p>
     <div id="btns">
         <a class="admin-links" href="/addJobs"><button type="button" class="admin-btns">Add Jobs</button></a><br>
         <a class="admin-links" href="/viewApps"><button type="button" class="admin-btns">View Applicants</button></a><br>
-        <a class="admin-links" href="/removeJob"><button type="button" class="admin-btns">Remove a Job</button></a><br>
+        <a class="admin-links" href="/removeJobs"><button type="button" class="admin-btns">Remove a Job</button></a><br>
         <a class="admin-links" href="/removeApps"><button type="button" class="admin-btns">Remove an Applicant</button></a><br>
     </div>
 </body>
