--- a/views/invalid.ejs
+++ b/views/invalid.ejs
@@ -14,6 +14,6 @@
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
     <a class="links" href="/login">Login</a>
-    <p id="invalid">Invalid login.<br>Click admin to try again.</p>
+    <p id="invalid">Invalid login.<br>Click login to try again.</p>
 </body>
 </html>
