--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,22 @@
     <a class="links" href="/about">About</a>
     <a class="links" href="/login">Login</a>
     <div id="form">
-        <script src="/jobBoardServer.js">
+        <script src="/jobBoardServer.js"></script>
+        <form id="login" action=<%- port %> method="post">
+            <fieldset>
+                <legend>New User</legend>
+                Username: <br>
+                <input type="text" size="20" id="username" name="username" required> <br>
+                Password: <br>
+                <input type="text" size="20" id="password" name="password" required> <br>
+                Confirm Password: <br>
+                <input type="text" size="20" id="password2" name="password2" required> <br>
+
+                <input type="submit" value="Submit" onclick="return confirm('Are you sure everything is filled out correctly?')"> 
+            </fieldset>
+        </form>
+    </div>
+    <!-- <script> 
             function validate() {
                 const password = document.getElementById("password");
                 const password2 = document.getElementById("password2");
@@ -26,17 +41,8 @@
                 }
                 return true;
             }
-        </script>
-        <form id="register" action=<%- port %> method="post">
-            <fieldset>
-                Username: <br>
-                <input type="text" size="20" id="username" name="username" required> <br>
-                Password: <br>
-                <input type="text" size="20" id="password" name="password" minlength="4" required> <br>
-                Password: <br>
-                <input type="text" size="20" id="password2" name="password2" minlength="4" required> <br>
-                <input type="submit" value="Login" onclick="return validate()">             </fieldset>
-        </form>
-    </div>
+        </script>  -->
+
+    <!-- onclick="return validate()"-->
 </body>
 </html>
