--- a/views/viewApps.ejs
+++ b/views/viewApps.ejs
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
 
 <head>
@@ -9,7 +8,7 @@
 
 <body>
     <img src="images/logo.png" id="logo">
-	<p id="title">User Login</p>
+	<p id="title">Search by Job Posting</p>
     <a class="links" href="/">Home</a>
     <a class="links" href="/board">Jobs</a>
     <a class="links" href="/about">About</a>
@@ -18,14 +17,10 @@
         <script src="/jobBoardServer.js"></script>
         <form id="login" action=<%- port %> method="post">
             <fieldset>
-                <legend>Login</legend>
-                Username: <br>
-                <input type="text" size="20" id="username" name="username"> <br>
-                Password: <br>
-                <input type="text" size="20" id="password" name="password"> <br>
-                <p id="hint">It's easy as 1234</p>
-                <input type="submit" value="Login">
-                <a href="/register"><button type="button">Register</button></a><br>
+                Job Title: <br>
+                <input type="text" size="20" id="title" name="title" required> <br>
+
+                <input type="submit" value="Search">
             </fieldset>
         </form>
     </div>
